--- a/Multas/Multas/Web.config
+++ b/Multas/Multas/Web.config
@@ -14,15 +14,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  
-  
-  <connectionStrings>
-    
-    <add name ="MultasConnectionString" 
-      connectionString =  "Data Source =(LocalDB)\MSSQLLocalDB; AttachDbFilename=|DataDirectory|\MultasDB.mdf; Integrated Security = True;"
-      providerName="System.Data.SqlClient"
-    />  
-    
+
+
+  <connectionStrings >
+    <add name ="MultasDBConnectionString"
+         connectionString ="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MultasDB.mdf;Integrated Security=True;"
+         providerName="System.Data.SqlClient"
+      />
   </connectionStrings>
   
   
