--- a/Multas/Multas/Multas.csproj
+++ b/Multas/Multas/Multas.csproj
@@ -112,6 +112,7 @@
     <Content Include="imagens\JoseAlves.jpg" />
     <Content Include="imagens\LurdesVieira.jpg" />
     <Content Include="imagens\PauloVieira.jpg" />
+    <Content Include="imagens\quemeviunascer.jpg" />
     <Content Include="imagens\RuiVieira.jpg" />
     <Content Include="imagens\TaniaVieira.jpg" />
     <Content Include="Scripts\bootstrap.js" />
