É possivel enviar imagens ao criar agentes

--- a/Multas/Multas/Multas.csproj
+++ b/Multas/Multas/Multas.csproj
@@ -109,6 +109,7 @@
     <Content Include="imagens\BeatrizPinto.jpg" />
     <Content Include="imagens\captura.jpg" />
     <Content Include="imagens\ClaudiaPinto.jpg" />
+    <Content Include="imagens\default.jpg" />
     <Content Include="imagens\JoseAlves.jpg" />
     <Content Include="imagens\LurdesVieira.jpg" />
     <Content Include="imagens\PauloVieira.jpg" />
